@@ -407,7 +407,7 @@ private:
   int parse_pat(unsigned char *pat);
   int parse_pmt(unsigned char *pmt);
   bool parse_start_unit_packet(mpeg_ts_track_ptr &track, mpeg_ts_packet_header_t *ts_packet_header, unsigned char *&ts_payload, unsigned char &ts_payload_size);
-  void probe_packet_complete(mpeg_ts_track_ptr &track, int tidx);
+  void probe_packet_complete(mpeg_ts_track_ptr &track);
 
   file_status_e finish();
   int send_to_packetizer(mpeg_ts_track_ptr &track);
